# fluidloom

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  MODULE10_STATUS.md  MODULE6_CHECKLIST.md  README.md  debug_parser_test  debug_parser_test.cpp  regenerate_parsers.sh
.github/workflows/: system_tests.yml
benchmarks/: flow_past_sphere.fl  lid_driven_cavity.fl
ci/configs/: performance_gates.json
ci/scripts/: regression_detector.py
cmake/: FindANTLR4.cmake  FindOpenCL.cmake
docker/: Dockerfile  README.md  docker-compose.yml
docker/scripts/: build.sh  (+3 more)
docs/: ANTLR_STATUS.md  Phase5_ANTLR_Visitors_Design.md
examples/: fields.fl  lattices.fl  test_fields.fl  test_lattices.fl
kernels/: README.md  halo_pack.cl  hilbert.cl
perf/: module6_baseline.json
src/adaptation/: AdaptationEngine.cpp  BalanceEnforcer.cpp  CMakeLists.txt  MergeEngine.cpp  README.md  SplitEngine.cpp
src/adaptation/balance/: README.md
src/adaptation/kernels/: balance_enforce.cl  compact_cells.cl  hilbert_encode_3d.cl  merge_cells.cl  split_cells.cl
src/adaptation/merge/: README.md
src/adaptation/split/: README.md
src/adaptation/utils/: HilbertCodec3D.cpp  README.md
src/core/: CMakeLists.txt  README.md
src/core/backend/: BackendFactory.cpp  MockBackend.cpp  OpenCLBackend.cpp
src/core/fields/: FieldDescriptor.cpp  SOAFieldManager.cpp
src/core/hashmap/: CompactionEngine.cpp  HashTableManager.cpp  README.md  RadixSort.cpp
src/core/hilbert/: CellCoord.cpp  HilbertCodec.cpp  HilbertCodec3D.cpp  README.md
src/core/registry/: FieldRegistry.cpp
src/geometry/: CMakeLists.txt
src/geometry/implicit/: ImplicitEvaluator.cpp
src/geometry/placer/: GeometryPlacer.cpp
src/geometry/voxelizer/: SimpleSTLVoxelizer.cpp
src/halo/: CMakeLists.txt  GhostRange.cpp  GhostRangeBuilder.cpp  HaloExchanger.cpp
src/halo/buffers/: DoubleBufferController.cpp
src/halo/communicators/: HaloExchangeManager.cpp
src/halo/events/: EventChain.cpp
src/halo/interpolation/: TrilinearInterpolator.cpp  VolumeWeightedAverager.cpp
src/halo/packers/: HaloPackKernel.cpp  HaloUnpackKernel.cpp
src/parsing/: CMakeLists.txt  ParseError.cpp  README.md  SimulationBuilder.cpp
src/parsing/ast/: ExpressionAST.cpp  StatementAST.cpp
src/parsing/cli/: ParseTool.cpp  SimulationRunner.cpp
src/parsing/codegen/: OpenCLGenerator.cpp  OpenCLPreambleGenerator.cpp  TypeResolver.cpp
src/parsing/grammars/: FluidLoomExpressionLexer.g4  FluidLoomExpressionParser.g4  FluidLoomFieldsLexer.g4  FluidLoomFieldsParser.g4  FluidLoomKernelLexer.g4  FluidLoomKernelParser.g4  FluidLoomLatticesLexer.g4  FluidLoomLatticesParser.g4  FluidLoomSimulationLexer.g4  FluidLoomSimulationParser.g4
src/parsing/registry/: ConstantRegistry.cpp  LatticeDescriptor.cpp  LatticeRegistry.cpp
src/parsing/semantic/: SemanticAnalyzer.cpp
src/parsing/symbol_table/: SymbolTable.cpp
src/profiling/: CMakeLists.txt  Profiler.cpp
src/runtime/: CMakeLists.txt  README.md
src/runtime/dependency/: DependencyGraphBuilder.cpp  FieldVersionTracker.cpp  HazardAnalyzer.cpp
src/runtime/executor/: EventChainIntegrator.cpp  README.md
src/runtime/nodes/: AdaptMeshNode.cpp  BarrierNode.cpp  ExecutionNode.cpp  HaloExchangeNode.cpp  KernelNode.cpp  README.md  RebalanceMeshNode.cpp
src/runtime/scheduler/: HaloInserter.cpp  LevelAwareSorter.cpp  TopologicalScheduler.cpp
src/transport/: CMakeLists.txt  README.md
src/transport/buffers/: GPUAwareBuffer.cpp  README.md
src/transport/events/: MPIEventBridge.cpp  README.md
src/transport/mpi/: MPIRequestManager.cpp  MPITransport.cpp
src/transport/p2p/: PeerAccessManager.cpp  README.md
tests/: CMakeLists.txt  INTEGRATION_COMPLETE.md  MODULE16_README.md  MODULE16_SUMMARY.md  TEST_GUIDE.md  main.cpp  validation_tests_CMakeLists.txt
tests/benchmark/: CMakeLists.txt  benchmark_halo.cpp  benchmark_transport.cpp
tests/contract/: CMakeLists.txt  module6_contract.cpp
tests/cross_backend/: cross_backend_test.cpp
tests/integration/: CMakeLists.txt  ProfilingTest.cpp  VTKTest.cpp
tests/integration/adaptation/: AdaptationIntegrationTest.cpp  CMakeLists.txt
tests/integration/halo/: CMakeLists.txt  test_halo_integration.cpp
tests/integration/transport/: CMakeLists.txt  test_two_gpu_exchange.cpp
tests/mock/mpi/: mock_mpi.h
tests/perf/: CMakeLists.txt  README.md
tests/perf/halo/: halo_benchmark.cpp
tests/perf/rebuild/: rebuild_benchmark.cpp
tests/perf/scaling/: scaling_test.cpp
tests/performance/: CMakeLists.txt  test_parser_perf.cpp
tests/restart/: checkpoint_restart_test.cpp
tests/system/: CMakeLists.txt
tests/system/lid_driven_cavity/: README.md  lid_driven_cavity_test.cpp
tests/system/memory/: memory_safety_test.cpp
tests/system/taylor_green_vortex/: README.md  taylor_green_test.cpp
tests/system/wind_tunnel/: README.md  wind_tunnel_test.cpp
tests/unit/: CMakeLists.txt  test_backend_factory.cpp  test_mock_backend.cpp  test_opencl_backend.cpp
tests/unit/adaptation/: BalanceEnforcerTest.cpp  CMakeLists.txt  MergeEngineTest.cpp  SplitEngineTest.cpp
tests/unit/fields/: test_field_manager.cpp
tests/unit/geometry/: CMakeLists.txt  GeometryVoxelizerTest.cpp
tests/unit/halo/: CMakeLists.txt  test_double_buffer.cpp  test_exchange_manager.cpp  test_ghost_range.cpp  test_halo_exchanger.cpp  test_interpolation.cpp  test_kernels.cpp  test_pack_layout.cpp
tests/unit/hashmap/: test_hash_table.cpp
tests/unit/hilbert/: test_hilbert_codec.cpp  test_hilbert_opencl.cpp
tests/unit/parsing/: CMakeLists.txt  test_parsing.cpp  test_semantic.cpp
tests/unit/runtime/: CMakeLists.txt  test_field_version_tracker.cpp  test_hazard_analyzer.cpp  test_topological_scheduler.cpp
tests/unit/transport/: CMakeLists.txt  test_gpu_aware_buffer.cpp  test_mpi_transport.cpp
tests/validation/: CMakeLists.txt  README.md  TraceValidator.h  trace_validation_test.cpp
tests/validation/analytical/: LidDrivenCavitySolution.h  TaylorGreenSolution.h
tools/: update_includes.py
tools/test_harness/: BackendAdapter.h  CMakeLists.txt  GoldDataManager.cpp  GoldDataManager.h  TestHarness.cpp  TestHarness.h
(+99 files in other folders)
